# brain-sdk

./: .gitignore  CMakeLists.txt  README.md
docs/: BUTTON_LED.md  LED.md  LEDS.md  MIDI_TO_CV.md  POTS.md  POT_MULTIFUNCTION_PLAN.md  SETUP.md
lib/brain-common/: brain-common.h  brain-gpio-setup.h
lib/brain-ui/: CMakeLists.txt  button-led.cpp  led.cpp  leds.cpp  pot-multi-function.cpp  pots.cpp
lib/brain-ui/include/brain-ui/: button-led.h  led.h  leds.h  pot-multi-function.h  pots.h
lib/brain-utils/: midi-to-cv.cpp
lib/brain-utils/include/brain-utils/: midi-to-cv.h
sandbox/: CMakeLists.txt  README.md  main.cpp
sandbox/apps/: blink.cpp  blink.h  midi_to_cv_test.cpp  multipot_test.cpp  multipot_test.h
scripts/: new-brain-app.sh
test/: CMakeLists.txt  README.md  main.cpp
test/apps/: led-test-cases.md  leds_test.cpp  leds_test.h  midi_to_cv_test.h
